Remaining services and test cases

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,17 @@ spring.h2.console.path=/h2-console
 spring.h2.console.settings.trace=false
 spring.h2.console.settings.web-allow-others=false
 logging.level.org.springframework.web=DEBUG
+logging.level.org.springframework.security=DEBUG
+
+# Google OAuth2 Configuration
+spring.security.oauth2.client.registration.google.client-id=985745126827-dpu64ljrb9vqd271v7af02fftp2mqnfc.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=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
+spring.security.oauth2.client.registration.google.scope=email,profile
+spring.security.oauth2.client.registration.google.redirect-uri={baseUrl}/login/oauth2/code/{registrationId}
+
+spring.security.oauth2.client.provider.google.authorization-uri=https://accounts.google.com/o/oauth2/auth
+spring.security.oauth2.client.provider.google.token-uri=https://oauth2.googleapis.com/token
+spring.security.oauth2.client.provider.google.user-info-uri=https://www.googleapis.com/oauth2/v3/userinfo
+spring.security.oauth2.client.provider.google.user-name-attribute=sub
+
+spring.security.oauth2.resourceserver.jwt.issuer-uri=https://accounts.google.com
