Test cases, documentaion added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,8 +11,9 @@ logging.level.org.springframework.web=DEBUG
 logging.level.org.springframework.security=DEBUG
 
 # Google OAuth2 Configuration
-spring.security.oauth2.client.registration.google.client-id=${GOOGLE_CLIENT_ID}
-spring.security.oauth2.client.registration.google.client-secret=${GOOGLE_CLIENT_SECRET}
+spring.security.oauth2.client.registration.google.client-id=985745126827-dpu64ljrb9vqd271v7af02fftp2mqnfc.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=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
+
 spring.security.oauth2.client.registration.google.scope=email,profile
 spring.security.oauth2.client.registration.google.redirect-uri={baseUrl}/login/oauth2/code/{registrationId}
 
